gitops/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alffino-python-hello
  namespace: alffino
  labels:
    app.kubernetes.io/name: alffino-python-hello
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: alffino-python-hello
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alffino-python-hello
      annotations:
        app.kubernetes.io/version: 9666b5503096bfea767b96e53c0bee5ba651d22b
    spec:
      serviceAccountName: alffino-python-hello
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: app
          image: alffino-python-hello:local
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
